--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,17 @@ h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: bolder;
     font-size: 90px;
-    color: whitesmoke;
+    color: salmon;
     margin: 0 auto;
     text-align: center;
+    text-shadow: 2px 2px 2px ghostwhite;
+    
 }
 body {
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Open Sans', sans-serif;
+    color: #323232;
+    
+
     
 }
 
@@ -23,7 +28,7 @@ body {
     
 }
 button {
-    
+    color: salmon;
     background-color: transparent;
     border: 0;
     outline: 0;
@@ -32,12 +37,14 @@ button {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 15px;
-    margin-bottom: 4px;
+    font-size: 25px;
+    margin-bottom: 4px; 
+    text-shadow: 2px 2px 2px ghostwhite;
+    
 }
 
 button:hover {
-    color: whitesmoke;
+    color: transparent;
 }
 
 .question {
